<resources>

    <string name="app_name">Robodex</string>

    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_list">@string/app_name</string>
    <string name="title_activity_detail">@string/app_name</string>
    <string name="title_activity_map">@string/app_name</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="specialty">Specialty</string>
    <string name="specialties">Specialties</string>
    <string name="specialists">Specialists</string>
    <string name="organization">Organization</string>
    <string name="organizations">Organizations</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="person">Person</string>
    <string name="people">People</string>
    <string name="near_me">Near Me</string>
    <string name="map_items">Map Items</string>
    <string name="links">Links</string>
    <string name="recent">Recent</string>
    <string name="pending_removals">Pending Removals</string>
    <string name="manage_roles">Manage Roles</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="checkin">Check-In</string>

    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="email1">Email1</string>
    <string name="email2">Email2</string>
    <string name="phone">Phone</string>
    <string name="phone1">Phone1</string>
    <string name="phone2">Phone2</string>
    <string name="checkin_time">Last Check-In</string>
    <string name="notes">Notes</string>
    <string name="primary">Headquarters / Primary Location</string>
    <string name="personal_info">Personal Info</string>

    <string name="add_specialty">Add Specialty</string>
    <string name="add_organization">Add Organization</string>

    <string name="detail_person">Person Details</string>
    <string name="detail_location">Location Details</string>

    <string name="edit_person">Edit Person</string>
    <string name="edit_location">Edit Location</string>

    <string name="search_results">Search Results</string>
    <string name="search_hint_default">Search All</string>

    <string name="blank">(none)</string>

    <string name="content_description_expand_collapse">Expand/Collapse</string>

    <string name="error_invalid_list_type">Nothing to display</string>
    <string name="error_invalid_details_type">Nothing to display</string>
</resources>