<menu xmlns:android="http://schemas.android.com/apk/res/android">
   	<item android:id="@+id/search"
   	    android:title="@string/search"
   	    android:icon="@drawable/search"
        android:orderInCategory="99"
        android:showAsAction="always" />
   	<item android:id="@+id/create"
        android:title="@string/create"
        android:icon="@drawable/edit"
        android:orderInCategory="102"
        android:visible="false"
        android:showAsAction="ifRoom" />
   	<item android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        android:orderInCategory="102"
        android:visible="false"
        android:showAsAction="ifRoom" />
   	<item android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/save"
        android:orderInCategory="104"
        android:visible="false"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/about"
        android:orderInCategory="110"
        android:showAsAction="never" />
</menu>
