<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="6dp" >
	    <TextView
            android:id="@+id/organization"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <CheckBox
	        android:id="@+id/primary"
            android:text="@string/primary"
	        android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/address"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/city"
            android:hint="@string/city"
            android:inputType="textCapWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/state"
            android:entries="@array/states_full"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email1"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email2"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/phone1"
            android:hint="@string/phone1"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/phone2"
            android:hint="@string/phone2"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>