<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="6dp" >
	    <TextView
            android:id="@+id/name"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <TextView
            android:text="@string/notes"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <EditText
            android:id="@+id/notes"
            android:hint="@string/notes"
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/specialties"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/specialtiesContainer"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <TextView
	            android:id="@+id/addSpecialty"
	            android:text="@string/add_specialty"
	            android:textColor="#0000FF"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	    </LinearLayout>
	    <TextView
            android:text="@string/organizations"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/organizationsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
	        <TextView
                android:id="@+id/addOrganization"
                android:text="@string/add_organization"
                android:textColor="#0000FF"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
	    </LinearLayout>
	    <TextView
	        android:id="@+id/personalInfoExpandCollapse"
            android:text="@string/personal_info"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/expand"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <LinearLayout
            android:id="@+id/personalInfoContainer"
            android:orientation="vertical"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
		    <EditText
	            android:id="@+id/firstName"
	            android:hint="@string/first_name"
	            android:inputType="textPersonName"
	            android:layout_marginTop="16dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/lastName"
	            android:hint="@string/last_name"
	            android:inputType="textPersonName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/address"
	            android:hint="@string/address"
	            android:inputType="textPostalAddress"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/city"
	            android:hint="@string/city"
	            android:inputType="textCapWords"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <Spinner
	            android:id="@+id/state"
	            android:entries="@array/states_full"
	            android:spinnerMode="dialog"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/zip"
	            android:hint="@string/zip"
	            android:inputType="number"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/email"
	            android:hint="@string/email"
	            android:inputType="textEmailAddress"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/phone1"
	            android:hint="@string/phone1"
	            android:inputType="phone"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <EditText
	            android:id="@+id/phone2"
	            android:hint="@string/phone2"
	            android:inputType="phone"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	    </LinearLayout>
    </LinearLayout>
</ScrollView>