<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
        <TextView
		    android:id="@+id/name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:minHeight="?android:attr/listPreferredItemHeight"
		    android:paddingLeft="6dip"
		    android:textStyle="bold"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/specialtiesExpandCollapse"
            android:text="@string/specialties"
            android:drawableLeft="@drawable/collapse"
            android:textStyle="bold"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:contentDescription="@string/content_description_expand_collapse" />
        <TextView
            android:id="@+id/specialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/organizationsExpandCollapse"
            android:text="@string/organizations"
            android:drawableLeft="@drawable/collapse"
            android:textStyle="bold"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:contentDescription="@string/content_description_expand_collapse" />
        <TextView
            android:id="@+id/organizations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:paddingRight="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:drawableRight="@drawable/location"
            android:drawablePadding="16dp" />
        <TextView
            android:text="@string/checkin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/checkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:paddingRight="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:drawableRight="@drawable/location"
            android:drawablePadding="16dp" />
        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="bottom"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:paddingRight="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:drawableRight="@drawable/call"
            android:drawablePadding="16dp" />
        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:paddingRight="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:drawableRight="@drawable/email"
            android:drawablePadding="16dp" />
        <TextView
            android:text="@string/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:paddingRight="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</ScrollView>